left align text fix

--- a/firebasePractice/styles.css
+++ b/firebasePractice/styles.css
@@ -8,6 +8,6 @@ body {
     display: none;
 }
 
-h1, h3 {
+h1 {
     text-align: center;
 }
